[package]
name = "containers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
typed_test_gen = "0.1.0"
criterion = "0.5.1"

[[bench]]
name = "insertion"
harness = false
[[bench]]
name = "access"
harness = false
