[package]
name = "containers"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
typed_test_gen = "0.1.0"
criterion = "0.5.1"

[[bench]]
name = "insertion"
harness = false
[[bench]]
name = "access"
harness = false
[[bench]]
name = "presence"
harness = false
[[bench]]
name = "removal"
harness = false

[[bench]]
name = "string_map"
harness = false
